--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ body * {
 
 #container {
   width: 360px;
+  max-width: 588px;
   margin: 56px auto 0px; /*UTILIZAR QUANDO A LARGURA É DEFINIDA*/
+  padding: 0 24px;
 }
 
 /*PROFILE*/
